openshift/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wildfly
  namespace: peter-hudcovic-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wildfly
  template:
    metadata:
      labels:
        app: wildfly
    spec:
      containers:
        - name: wildfly
          image: default-route-openshift-image-registry.apps.rm2.thpm.p1.openshiftapps.com/peter-hudcovic-dev/donation-wildfly:1.5
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 1Gi
