openshift/postgresql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
  namespace: peter-hudcovic-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      containers:
        - name: postgresql
          image: quay.io/sclorg/postgresql-16-c9s
          ports:
            - name: postgresql
              containerPort: 5432

          volumeMounts:
            - name: postgresql-data
              mountPath: /var/lib/pgsql/data

          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi

      volumes:
        - name: postgresql-data
          persistentVolumeClaim:
            claimName: postgresql-data

---
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  namespace: peter-hudcovic-dev
spec:
  type: ClusterIP
  selector:
    app: postgresql
  ports:
    - name: postgresql
      port: 5432
      targetPort: postgresql
