openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wildfly
  namespace: peter-hudcovic-dev
spec:
  type: ClusterIP
  selector:
    app: wildfly
  ports:
    - name: http
      port: 8080
      targetPort: http
